<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp"
    tools:context=".ui.activities.LoginActivity" >

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_cpf_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_welcome_cats" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_cpf_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_welcome"
        android:hint="@string/cpf"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="14"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/text_color"
        app:placeholderText="@string/cpfExample"
        app:placeholderTextColor="@color/secondary" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_cpf_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@drawable/background_edittext"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/secondary"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_birth_date_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_cpf_login"
        android:hint="@string/birthDate"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/text_color"
        app:placeholderText="@string/birthDateExample"
        app:placeholderTextColor="@color/secondary" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_birth_date_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/background_edittext"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/secondary"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_login_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_birth_date_login"
        android:background="@drawable/primary_button_background"
        android:clickable="true"
        android:gravity="center"
        android:padding="17dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/spinner_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btn_login_screen"
        app:layout_constraintLeft_toLeftOf="@id/btn_login_screen"
        app:layout_constraintRight_toRightOf="@id/btn_login_screen"
        app:layout_constraintTop_toTopOf="@id/btn_login_screen"
        android:gravity="center"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/background" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="@string/made_with_love"
        android:textColor="@color/text_color_dark"
        android:textSize="13dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
