<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/bg_dialog_new_sector"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/title_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Insira um Produto"
        android:textColor="@color/secondary"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Preencha com as informações do produto"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Nome do produto"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/text_color"
        app:placeholderText="Queijo"
        app:placeholderTextColor="@color/secondary" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/secondary"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Código de barras"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/text_color"
        app:placeholderText="7890960837929"
        app:placeholderTextColor="@color/secondary" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="@color/secondary"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/read_barcode_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/read_barcode"
        android:textColor="@color/purple"
        android:textSize="14dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantity_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Quantidade"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/text_color"
        app:placeholderText="120"
        app:placeholderTextColor="@color/secondary" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textColor="@color/secondary"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/button_cancel_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_dialog_buttons"
            android:backgroundTint="@color/indianred"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/background"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/button_confirm_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_buttons"
            android:backgroundTint="@color/secondary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/background"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
